[KARAF-6091]upgrade to jaxb 2.3.2